--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1086,6 +1086,10 @@ video {
   height: 100vh;
 }
 
+.h-\[350px\] {
+  height: 350px;
+}
+
 .\!w-px {
   width: 1px !important;
 }
@@ -1421,6 +1425,14 @@ video {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.justify-stretch {
+  justify-content: stretch;
 }
 
 .gap-1 {
