--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -572,6 +572,10 @@ video {
   visibility: visible;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -923,10 +927,6 @@ video {
 
 .grid {
   display: grid;
-}
-
-.contents {
-  display: contents;
 }
 
 .hidden {
