--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1371,6 +1371,14 @@ video {
   width: 20rem;
 }
 
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-2\/12 {
+  width: 16.666667%;
+}
+
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -2150,6 +2158,16 @@ video {
 .py-\[2px\] {
   padding-top: 2px;
   padding-bottom: 2px;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-1 {
