--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1114,6 +1114,14 @@ video {
   height: 100vh;
 }
 
+.h-2\/6 {
+  height: 33.333333%;
+}
+
+.h-1\/5 {
+  height: 20%;
+}
+
 .\!w-px {
   width: 1px !important;
 }
