--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -721,11 +721,6 @@ video {
   margin-right: 2.5rem;
 }
 
-.mx-24 {
-  margin-left: 6rem;
-  margin-right: 6rem;
-}
-
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -764,6 +759,26 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
+}
+
+.mx-12 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+.mx-32 {
+  margin-left: 8rem;
+  margin-right: 8rem;
+}
+
+.mx-28 {
+  margin-left: 7rem;
+  margin-right: 7rem;
+}
+
+.mx-24 {
+  margin-left: 6rem;
+  margin-right: 6rem;
 }
 
 .mb-0 {
@@ -838,10 +853,6 @@ video {
   margin-left: 1.5rem;
 }
 
-.ml-\[55px\] {
-  margin-left: 55px;
-}
-
 .mr-1 {
   margin-right: 0.25rem;
 }
@@ -908,6 +919,22 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.ml-\[50px\] {
+  margin-left: 50px;
+}
+
+.ml-\[55px\] {
+  margin-left: 55px;
+}
+
+.ml-11 {
+  margin-left: 2.75rem;
+}
+
+.-ml-16 {
+  margin-left: -4rem;
 }
 
 .block {
@@ -1085,6 +1112,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-2\/6 {
+  height: 33.333333%;
 }
 
 .h-1\/5 {
@@ -1275,10 +1306,6 @@ video {
   width: 20%;
 }
 
-.w-\[20rem\] {
-  width: 20rem;
-}
-
 .w-\[24px\] {
   width: 24px;
 }
@@ -1346,6 +1373,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[20rem\] {
+  width: 20rem;
 }
 
 .w-1\/12 {
@@ -2135,6 +2166,11 @@ video {
 .py-\[2px\] {
   padding-top: 2px;
   padding-bottom: 2px;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .py-8 {
