--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -774,6 +774,10 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -942,10 +946,6 @@ video {
   height: 25%;
 }
 
-.h-1\/5 {
-  height: 20%;
-}
-
 .h-1\/6 {
   height: 16.666667%;
 }
@@ -1087,16 +1087,16 @@ video {
   height: 100vh;
 }
 
+.h-1\/5 {
+  height: 20%;
+}
+
 .\!w-px {
   width: 1px !important;
 }
 
 .w-0 {
   width: 0px;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
 }
 
 .w-1\/5 {
@@ -1121,10 +1121,6 @@ video {
 
 .w-16 {
   width: 4rem;
-}
-
-.w-2\/12 {
-  width: 16.666667%;
 }
 
 .w-2\/5 {
@@ -1350,6 +1346,14 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-2\/12 {
+  width: 16.666667%;
 }
 
 .min-w-\[180px\] {
@@ -2128,14 +2132,14 @@ video {
   padding-bottom: 13rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .py-\[2px\] {
   padding-top: 2px;
   padding-bottom: 2px;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-1 {
