--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -906,6 +906,10 @@ video {
   margin-top: 2rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .block {
   display: block;
 }
@@ -1085,6 +1089,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[10\%\] {
+  height: 10%;
+}
+
+.h-\[13\%\] {
+  height: 13%;
 }
 
 .\!w-px {
