--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -688,6 +688,10 @@ video {
   z-index: 0;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .\!-m-px {
   margin: -1px !important;
 }
@@ -1089,6 +1093,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-56 {
+  height: 14rem;
 }
 
 .\!w-px {
