--- a/client/src/components/Vendedores/Dashboard/Modal/Modal.module.css
+++ b/client/src/components/Vendedores/Dashboard/Modal/Modal.module.css
@@ -3,3 +3,9 @@
     background-color: #39394B;
     color: white; /* Cambiar el color del texto a blanco */
   }
+
+  .numberPick::-webkit-inner-spin-button,
+  .numberPick::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
