--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -592,6 +592,10 @@ video {
   inset: 0px;
 }
 
+.-right-14 {
+  right: -3.5rem;
+}
+
 .-right-7 {
   right: -1.75rem;
 }
@@ -602,6 +606,10 @@ video {
 
 .-top-20 {
   top: -5rem;
+}
+
+.-top-3 {
+  top: -0.75rem;
 }
 
 .bottom-0 {
@@ -682,14 +690,6 @@ video {
 
 .top-5 {
   top: 1.25rem;
-}
-
-.-right-14 {
-  right: -3.5rem;
-}
-
-.-top-3 {
-  top: -0.75rem;
 }
 
 .z-0 {
@@ -902,12 +902,24 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-32 {
+  margin-top: 8rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-52 {
+  margin-top: 13rem;
+}
+
+.mt-56 {
+  margin-top: 14rem;
 }
 
 .mt-6 {
@@ -920,18 +932,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-56 {
-  margin-top: 14rem;
-}
-
-.mt-52 {
-  margin-top: 13rem;
 }
 
 .block {
@@ -1223,6 +1223,10 @@ video {
   width: 83.333333%;
 }
 
+.w-52 {
+  width: 13rem;
+}
+
 .w-56 {
   width: 14rem;
 }
@@ -1376,10 +1380,6 @@ video {
   width: 100vw;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1531,11 +1531,6 @@ video {
 
 .gap-y-7 {
   row-gap: 1.75rem;
-}
-
-.gap-x-1 {
-  -moz-column-gap: 0.25rem;
-       column-gap: 0.25rem;
 }
 
 .overflow-auto {
@@ -1750,6 +1745,11 @@ video {
   background-color: rgb(36 102 141 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#26ad5f\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 173 95 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#26af7f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(38 175 127 / var(--tw-bg-opacity));
@@ -1763,6 +1763,11 @@ video {
 .bg-\[\#2a2a33\] {
   --tw-bg-opacity: 1;
   background-color: rgb(42 42 51 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#2bca80\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 202 128 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#2c2c2c\] {
@@ -1820,9 +1825,19 @@ video {
   background-color: rgb(70 136 102 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#474646\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 70 70 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#483dda\] {
   --tw-bg-opacity: 1;
   background-color: rgb(72 61 218 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#485d94\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 93 148 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#4f4f62\] {
@@ -1962,24 +1977,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#26ad5f\] {
+.bg-\[\#550000\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(38 173 95 / var(--tw-bg-opacity));
+  background-color: rgb(85 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#2bca80\] {
+.bg-\[\#7B0BC0\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(43 202 128 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#474646\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 70 70 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#485d94\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(72 93 148 / var(--tw-bg-opacity));
+  background-color: rgb(123 11 192 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-0 {
@@ -2204,6 +2209,11 @@ video {
 .py-\[2px\] {
   padding-top: 2px;
   padding-bottom: 2px;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pb-1 {
@@ -2734,6 +2744,11 @@ video {
   background-color: rgb(37 89 168 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#294ba7\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 75 167 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#2a286e\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(42 40 110 / var(--tw-bg-opacity));
@@ -2772,11 +2787,6 @@ video {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#294ba7\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(41 75 167 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#3570bd\]:hover {
