--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -942,6 +942,14 @@ video {
   margin-top: 2rem;
 }
 
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -1607,6 +1615,11 @@ video {
   border-bottom-right-radius: 9999px;
 }
 
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
 .\!border-0 {
   border-width: 0px !important;
 }
@@ -1988,6 +2001,54 @@ video {
 .bg-\[\#7B0BC0\] {
   --tw-bg-opacity: 1;
   background-color: rgb(123 11 192 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fafafa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#246dc0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 109 192 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#464545\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(70 69 69 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#153f6e\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 63 110 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#0d2642\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 38 66 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#0a1f36\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 31 54 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1a2e44\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 46 68 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1a1e44\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 30 68 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#00000077\] {
+  background-color: #00000077;
+}
+
+.bg-\[\#00000046\] {
+  background-color: #00000046;
 }
 
 .bg-opacity-0 {
