--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -592,10 +592,6 @@ video {
   inset: 0px;
 }
 
-.-right-14 {
-  right: -3.5rem;
-}
-
 .-right-7 {
   right: -1.75rem;
 }
@@ -606,10 +602,6 @@ video {
 
 .-top-20 {
   top: -5rem;
-}
-
-.-top-3 {
-  top: -0.75rem;
 }
 
 .bottom-0 {
@@ -692,8 +684,12 @@ video {
   top: 1.25rem;
 }
 
-.top-1 {
-  top: 0.25rem;
+.-right-14 {
+  right: -3.5rem;
+}
+
+.-top-3 {
+  top: -0.75rem;
 }
 
 .-top-32 {
@@ -910,24 +906,12 @@ video {
   margin-top: 0.75rem;
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-52 {
-  margin-top: 13rem;
-}
-
-.mt-56 {
-  margin-top: 14rem;
 }
 
 .mt-6 {
@@ -942,12 +926,24 @@ video {
   margin-top: 2rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-56 {
+  margin-top: 14rem;
+}
+
+.mt-52 {
+  margin-top: 13rem;
 }
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .block {
@@ -1239,10 +1235,6 @@ video {
   width: 83.333333%;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
 .w-56 {
   width: 14rem;
 }
@@ -1394,6 +1386,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-52 {
+  width: 13rem;
 }
 
 .min-w-\[180px\] {
@@ -1549,6 +1545,11 @@ video {
   row-gap: 1.75rem;
 }
 
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
 .overflow-auto {
   overflow: auto;
 }
@@ -1613,11 +1614,6 @@ video {
 .rounded-r-full {
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
-}
-
-.rounded-b-md {
-  border-bottom-right-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
 }
 
 .\!border-0 {
@@ -1766,11 +1762,6 @@ video {
   background-color: rgb(36 102 141 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#26ad5f\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 173 95 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#26af7f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(38 175 127 / var(--tw-bg-opacity));
@@ -1784,11 +1775,6 @@ video {
 .bg-\[\#2a2a33\] {
   --tw-bg-opacity: 1;
   background-color: rgb(42 42 51 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#2bca80\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 202 128 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#2c2c2c\] {
@@ -1846,19 +1832,9 @@ video {
   background-color: rgb(70 136 102 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#474646\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 70 70 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#483dda\] {
   --tw-bg-opacity: 1;
   background-color: rgb(72 61 218 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#485d94\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(72 93 148 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#4f4f62\] {
@@ -1998,19 +1974,28 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#7B0BC0\] {
+.bg-\[\#26ad5f\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(123 11 192 / var(--tw-bg-opacity));
+  background-color: rgb(38 173 95 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#fafafa\] {
+.bg-\[\#2bca80\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
+  background-color: rgb(43 202 128 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#246dc0\] {
+.bg-\[\#474646\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(36 109 192 / var(--tw-bg-opacity));
+  background-color: rgb(71 70 70 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#485d94\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 93 148 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#00000046\] {
+  background-color: #00000046;
 }
 
 .bg-\[\#464545\] {
@@ -2018,37 +2003,9 @@ video {
   background-color: rgb(70 69 69 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#153f6e\] {
+.bg-\[\#7B0BC0\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(21 63 110 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#0d2642\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(13 38 66 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#0a1f36\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(10 31 54 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#1a2e44\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 46 68 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#1a1e44\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 30 68 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#00000077\] {
-  background-color: #00000077;
-}
-
-.bg-\[\#00000046\] {
-  background-color: #00000046;
+  background-color: rgb(123 11 192 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-0 {
@@ -2808,11 +2765,6 @@ video {
   background-color: rgb(37 89 168 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#294ba7\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(41 75 167 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#2a286e\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(42 40 110 / var(--tw-bg-opacity));
@@ -2851,6 +2803,11 @@ video {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#294ba7\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 75 167 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#3570bd\]:hover {
