--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -942,6 +942,14 @@ video {
   margin-top: 2rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .block {
   display: block;
 }
