--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -700,6 +700,10 @@ video {
   top: 1.25rem;
 }
 
+.-top-6 {
+  top: -1.5rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -848,10 +852,6 @@ video {
 
 .ml-5 {
   margin-left: 1.25rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
 }
 
 .ml-\[55px\] {
@@ -1123,6 +1123,10 @@ video {
   height: 100vh;
 }
 
+.h-\[80px\] {
+  height: 80px;
+}
+
 .\!w-px {
   width: 1px !important;
 }
@@ -1281,10 +1285,6 @@ video {
 
 .w-\[10\%\] {
   width: 10%;
-}
-
-.w-\[10rem\] {
-  width: 10rem;
 }
 
 .w-\[11\%\] {
@@ -1551,6 +1551,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-scroll {
+  overflow: scroll;
 }
 
 .text-ellipsis {
@@ -2637,6 +2641,11 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
+.text-\[\#9c9b9b\] {
+  --tw-text-opacity: 1;
+  color: rgb(156 155 155 / var(--tw-text-opacity));
+}
+
 .text-opacity-100 {
   --tw-text-opacity: 1;
 }
@@ -2883,6 +2892,10 @@ video {
 .focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
+}
+
+.group:hover .group-hover\:block {
+  display: block;
 }
 
 @media (prefers-reduced-motion: reduce) {
