--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -616,6 +616,10 @@ video {
   top: -8rem;
 }
 
+.-top-6 {
+  top: -1.5rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -700,16 +704,36 @@ video {
   top: 1.25rem;
 }
 
-.-top-6 {
-  top: -1.5rem;
-}
-
 .-top-7 {
   top: -1.75rem;
 }
 
 .-top-5 {
   top: -1.25rem;
+}
+
+.-left-56 {
+  left: -14rem;
+}
+
+.-left-64 {
+  left: -16rem;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.-bottom-6 {
+  bottom: -1.5rem;
+}
+
+.-bottom-7 {
+  bottom: -1.75rem;
+}
+
+.-top-10 {
+  top: -2.5rem;
 }
 
 .z-0 {
@@ -1078,10 +1102,6 @@ video {
   height: 2.25rem;
 }
 
-.h-\[13\%\] {
-  height: 13%;
-}
-
 .h-\[200px\] {
   height: 200px;
 }
@@ -1122,6 +1142,10 @@ video {
   height: 5rem;
 }
 
+.h-\[80px\] {
+  height: 80px;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -1133,22 +1157,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[10\%\] {
-  height: 10%;
-}
-
-.h-\[8\%\] {
-  height: 8%;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-\[80px\] {
-  height: 80px;
 }
 
 .\!w-px {
@@ -1410,10 +1418,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-14 {
-  width: 3.5rem;
 }
 
 .min-w-\[180px\] {
@@ -2036,6 +2040,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#1b1818\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 24 24 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#202020\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 32 32 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
 }
@@ -2520,6 +2534,11 @@ video {
   color: rgb(141 140 140 / var(--tw-text-opacity));
 }
 
+.text-\[\#9c9b9b\] {
+  --tw-text-opacity: 1;
+  color: rgb(156 155 155 / var(--tw-text-opacity));
+}
+
 .text-\[\#9eabbe\] {
   --tw-text-opacity: 1;
   color: rgb(158 171 190 / var(--tw-text-opacity));
@@ -2673,9 +2692,14 @@ video {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
-.text-\[\#9c9b9b\] {
+.text-\[\#378f9e\] {
   --tw-text-opacity: 1;
-  color: rgb(156 155 155 / var(--tw-text-opacity));
+  color: rgb(55 143 158 / var(--tw-text-opacity));
+}
+
+.text-\[\#4f9e37\] {
+  --tw-text-opacity: 1;
+  color: rgb(79 158 55 / var(--tw-text-opacity));
 }
 
 .text-\[\#4a8637\] {
@@ -2683,9 +2707,34 @@ video {
   color: rgb(74 134 55 / var(--tw-text-opacity));
 }
 
+.text-\[\#37864f\] {
+  --tw-text-opacity: 1;
+  color: rgb(55 134 79 / var(--tw-text-opacity));
+}
+
+.text-\[\#bcdd43\] {
+  --tw-text-opacity: 1;
+  color: rgb(188 221 67 / var(--tw-text-opacity));
+}
+
+.text-\[\#cdee58\] {
+  --tw-text-opacity: 1;
+  color: rgb(205 238 88 / var(--tw-text-opacity));
+}
+
+.text-\[\#aabd66\] {
+  --tw-text-opacity: 1;
+  color: rgb(170 189 102 / var(--tw-text-opacity));
+}
+
 .text-\[\#b3bebd\] {
   --tw-text-opacity: 1;
   color: rgb(179 190 189 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .text-opacity-100 {
@@ -2857,6 +2906,21 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
 .hover\:text-\[\#3570bd\]:hover {
   --tw-text-opacity: 1;
   color: rgb(53 112 189 / var(--tw-text-opacity));
@@ -2885,6 +2949,11 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#f73d3d\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(247 61 61 / var(--tw-text-opacity));
 }
 
 .focus\:z-10:focus {
@@ -3067,6 +3136,16 @@ video {
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
   }
 
+  .dark\:hover\:bg-blue-300:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-blue-400:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+  }
+
   .dark\:hover\:text-\[\#5cf73d\]:hover {
     --tw-text-opacity: 1;
     color: rgb(92 247 61 / var(--tw-text-opacity));
@@ -3075,6 +3154,11 @@ video {
   .dark\:hover\:text-white:hover {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:text-\[\#f73d3d\]:hover {
+    --tw-text-opacity: 1;
+    color: rgb(247 61 61 / var(--tw-text-opacity));
   }
 
   .dark\:focus\:border-blue-500:focus {
