--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -2437,6 +2437,10 @@ video {
   font-size: 65px;
 }
 
+.text-\[100px\] {
+  font-size: 100px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2537,11 +2541,6 @@ video {
 
 .text-\[\#dddb63b0\] {
   color: #dddb63b0;
-}
-
-.text-\[\#dddddd\] {
-  --tw-text-opacity: 1;
-  color: rgb(221 221 221 / var(--tw-text-opacity));
 }
 
 .text-\[\#e0dddd\] {
