--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -2036,6 +2036,10 @@ video {
   --tw-bg-opacity: 0.5;
 }
 
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
+}
+
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
