--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -2040,6 +2040,10 @@ video {
   --tw-bg-opacity: 0.7;
 }
 
+.bg-opacity-75 {
+  --tw-bg-opacity: 0.75;
+}
+
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
