Squashed commit of the following:
commit af2222f004a6855eac3f6d909e89b2abfcb79580
Merge: 1bacdc9a 4bd97416
Author: Jonavoe <voeffray.jonathan@gmail.com>
Date:   Tue Jul 18 21:23:45 2023 -0300

    Merge branch 'main' of https://github.com/Smlappadm/SmlAppDesarrollo

commit 1bacdc9af608419d66b9800bdbbdc867b26a560e
Author: Jonavoe <voeffray.jonathan@gmail.com>
Date:   Tue Jul 18 21:23:43 2023 -0300

    Update limpiezaBaseFunction.js

commit 4bd974164bd9ee2da23bf748f291c3aacfc1c3cd
Merge: d5347b95 d9a8e7de
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Tue Jul 18 21:12:00 2023 -0300

    Merge branch 'main' of https://github.com/Smlappadm/SmlAppDesarrollo

commit d5347b95b8fe2d76dc2f5a14672e524cca2b5639
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Tue Jul 18 21:11:59 2023 -0300

    Update VentasHistory.jsx

commit c9190fd42be47d58e8a889808b8c294fbb2fc37a
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Tue Jul 18 21:11:57 2023 -0300

    Update VentasAgenda.jsx

commit 5cf75837c835af70a1a2021c3512281ce13cad35
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Tue Jul 18 21:11:55 2023 -0300

    Update VentasDashboard.jsx

commit 6beed5490360702a115fc7824c178b7e679c73c8
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Tue Jul 18 21:11:53 2023 -0300

    Update VendedoresHistory.jsx

commit f9918f08cfb3fa21b27924aceb7f6a7357a775ae
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Tue Jul 18 21:11:52 2023 -0300

    Update VendedoresDashboard.jsx

commit c9a5a52f7fd970fc252453d15fa0ddcd0de7654f
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Tue Jul 18 21:11:50 2023 -0300

    Update VentasDashboard.jsx

commit d9a8e7de2c4cbba1bec0278a995c656d125e0408
Author: Jonavoe <voeffray.jonathan@gmail.com>
Date:   Tue Jul 18 20:

--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -886,6 +886,10 @@ video {
   margin-right: 1.25rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -948,10 +952,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
 }
 
 .block {
@@ -1553,6 +1553,10 @@ video {
   row-gap: 1.75rem;
 }
 
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
 .overflow-auto {
   overflow: auto;
 }
@@ -1932,6 +1936,11 @@ video {
   background-color: #b9b9b978;
 }
 
+.bg-\[\#c1c41f\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(193 196 31 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#d0da3d\] {
   --tw-bg-opacity: 1;
   background-color: rgb(208 218 61 / var(--tw-bg-opacity));
@@ -2010,14 +2019,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#c1c41f\] {
+.bg-blue-950 {
   --tw-bg-opacity: 1;
-  background-color: rgb(193 196 31 / var(--tw-bg-opacity));
-}
-
-.bg-pink-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(244 114 182 / var(--tw-bg-opacity));
+  background-color: rgb(23 37 84 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-0 {
@@ -2142,6 +2146,10 @@ video {
   padding: 0.625rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -2154,12 +2162,12 @@ video {
   padding: 1.25rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-1 {
