--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1561,6 +1561,11 @@ video {
   row-gap: 1.75rem;
 }
 
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
 .overflow-auto {
   overflow: auto;
 }
