Squashed commit of the following:
commit f281b085a9cd0e138d4e025f2dbffa9c759d7b75
Merge: 9c9c64d1 f61a6103
Author: Jonavoe <voeffray.jonathan@gmail.com>
Date:   Wed Jul 19 21:15:49 2023 -0300

    Merge branch 'main' of https://github.com/Smlappadm/SmlAppDesarrollo

commit 9c9c64d13060d05f3b4b7a0138742d3542018453
Author: Jonavoe <voeffray.jonathan@gmail.com>
Date:   Wed Jul 19 21:15:45 2023 -0300

    Update Promociones.jsx

commit 730b7637e3045b45f57210a4dbfe2dcd2ce3e3e8
Author: Jonavoe <voeffray.jonathan@gmail.com>
Date:   Wed Jul 19 21:15:41 2023 -0300

    Update AgregarPromosion.jsx

commit 3a57c1f0b31d9b7c5cf47eba63bd8b01d8009416
Author: Jonavoe <voeffray.jonathan@gmail.com>
Date:   Wed Jul 19 21:15:34 2023 -0300

    Update LeadRouter.js

commit f61a6103614ab24a18ba7cfe7e4a3c42ea7387bd
Merge: b1c75703 974021ef
Author: Nikitoo17 <nicolasfadel17@gmail.com>
Date:   Wed Jul 19 21:05:08 2023 -0300

    Merge branch 'main' of https://github.com/Smlappadm/SmlAppDesarrollo

commit b1c7570346b6d523b4c969c45f30109377370abf
Author: Nikitoo17 <nicolasfadel17@gmail.com>
Date:   Wed Jul 19 21:05:06 2023 -0300

    Update PromocionPago.jsx

commit 5dea151d0406b6c750346a8fc21c5de93ac61699
Author: Nikitoo17 <nicolasfadel17@gmail.com>
Date:   Wed Jul 19 20:09:30 2023 -0300

    Update PromocionPago.jsx

commit 974021ef8cabc54790953a4d82a3b0944c3b39a5
Merge: 513037cc d65dd324
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Wed Jul 19 20:02:53 2023 -0300

    Merge branch 'main' of https://github.com/Smlappadm/SmlAppDesarrollo

commit 513037cc0ad9f5aab46969c198b11fd026abafee
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Wed Jul 19 20:02:51 2023 -0300

    Update VentasDashboard.jsx

commit be0999e0fd1b14d779f30eaceb526afb74eb1fd8
Author: Juan Facundo Tam <107519577+juanfacundotam@users.noreply.github.com>
Date:   Wed Jul 19 20:02:49 2023 -0300

    Update ModalObservaciones.jsx

commit c593e1ce68ec40f639

--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -794,6 +794,11 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -1135,6 +1140,14 @@ video {
   height: 100vh;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[3px\] {
+  height: 3px;
+}
+
 .\!w-px {
   width: 1px !important;
 }
@@ -1261,6 +1274,10 @@ video {
 
 .w-7\/12 {
   width: 58.333333%;
+}
+
+.w-72 {
+  width: 18rem;
 }
 
 .w-8 {
@@ -1396,6 +1413,26 @@ video {
   width: 100vw;
 }
 
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.w-\[5000px\] {
+  width: 5000px;
+}
+
+.w-\[12\%\] {
+  width: 12%;
+}
+
+.w-\[14\%\] {
+  width: 14%;
+}
+
+.w-\[8\%\] {
+  width: 8%;
+}
+
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1406,6 +1443,10 @@ video {
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
 }
 
 .origin-center {
@@ -1549,12 +1590,12 @@ video {
   row-gap: 1rem;
 }
 
-.gap-y-7 {
-  row-gap: 1.75rem;
-}
-
 .gap-y-5 {
   row-gap: 1.25rem;
+}
+
+.gap-y-7 {
+  row-gap: 1.75rem;
 }
 
 .overflow-auto {
@@ -1703,6 +1744,11 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-r-transparent {
@@ -1985,6 +2031,11 @@ video {
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
+.bg-blue-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 37 84 / var(--tw-bg-opacity));
+}
+
 .bg-emerald-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(4 120 87 / var(--tw-bg-opacity));
@@ -2017,11 +2068,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-blue-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 37 84 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-0 {
@@ -2862,6 +2908,10 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.hover\:text-\[33px\]:hover {
+  font-size: 33px;
+}
+
 .hover\:text-\[\#3570bd\]:hover {
   --tw-text-opacity: 1;
   color: rgb(53 112 189 / var(--tw-text-opacity));
@@ -2885,6 +2935,11 @@ video {
 .hover\:text-blue-700:hover {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.hover\:text-green-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .hover\:text-red-400:hover {
