--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -2062,6 +2062,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#42ac9a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(66 172 154 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
 }
