--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -1160,6 +1160,14 @@ video {
   height: 100vh;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
 .\!w-px {
   width: 1px !important;
 }
