--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -712,6 +712,10 @@ video {
   top: 1.25rem;
 }
 
+.-right-0 {
+  right: -0px;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -1654,6 +1658,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-l-full {
   border-top-left-radius: 9999px;
   border-bottom-left-radius: 9999px;
@@ -1809,6 +1817,11 @@ video {
   background-color: rgb(33 72 180 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#219bac\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 155 172 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#222131\] {
   --tw-bg-opacity: 1;
   background-color: rgb(34 33 49 / var(--tw-bg-opacity));
@@ -1949,6 +1962,11 @@ video {
   background-color: rgb(141 139 12 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#972892\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(151 40 146 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#CDE1F4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(205 225 244 / var(--tw-bg-opacity));
@@ -2064,21 +2082,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#27c5da\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 197 218 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#219bac\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 155 172 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#972892\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(151 40 146 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-0 {
