--- a/client/src/components/Vendedores/Dashboard/VendedoresDashboard.module.css
+++ b/client/src/components/Vendedores/Dashboard/VendedoresDashboard.module.css
@@ -4,7 +4,7 @@
 .divTitle {
   width: 98%;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-content: center;
   margin: 30px 0 30px 10px;
 }
